Commit 24
⚠️Se Comienza a arreglar el SecurityConfig de cada .requestMatchers y agregando nuevos. por consecuencia posible que este commit deje algunas o varias funciones no operativas, ya que no se hizo ninguna prueba.
- Se elimino UsuarioController.java ya que ahora si se tiene un usuario ADMINISTRADOR
- Ahora se extrae el rol del JWT y se le asigna al Usuario
- Se agregó un método en JwtUtil.java:
    - Este método obtiene el campo "role" del JWT. Es lo que se usa en el filtro para construir el GrantedAuthority.
Se espera que para el siguiente commit ;
 - Validar los métodos HTTP (GET, POST, PUT, DELETE) reales que se usan.
 - Corregir los .requestMatchers(HttpMethod.XXX, "...") en SecurityConfig.
 - realizar los cambios en los controladores o servicios para asegurar la lógica contextual avanzando módulo por modulo.